--- a/doc/Adventurer3_Guider2_instruction/はじめに.md
+++ b/doc/Adventurer3_Guider2_instruction/はじめに.md
@@ -14,7 +14,8 @@
 ##### AizuGeekDojoにある3Dプリンタ
 Aizu Geek Dojoには3台の3Dプリンタがあります。
 - Guider Ⅱ
-    最大加工寸法 ?W x ?D x ?H mm
+    最大加工寸法  
+    280W x 250D x 300H mm
 - Adventurer 3 (2台)
     最大加工寸法 150W x 150D x 150H mm
 
